--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
-    "embla-carousel-autoplay": "^8.0.0-rc14",
-    "embla-carousel-react": "^8.0.0-rc14",
     "framer-motion": "^10.16.4",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "stats.js": "^0.17.0",
     "three": "^0.157.0",
     "three-orbit-controls": "^82.1.0"
   },
